[package]
name = "{{project-name}}" 
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.6.5", features = ["attributes"] }
tide = "0.15.0"
serde = "1.0.117"
serde_json = "1.0.59"
serde_urlencoded = "0.7.0"
surf = "2.1.0"
dotenv = "0.15.0"
uuid = { version = "0.8", features = ["v4"] }
tide-testing = "0.1.2"

[roche]
dev_build_image = "quay.io/roche/dev-default:1.4.0"
release_build_image = "quay.io/roche/default:1.3.0"
runtime_image = "quay.io/roche/alpine-libgcc:3.12"